--- a/src/components/nav-item/NavItem.module.scss
+++ b/src/components/nav-item/NavItem.module.scss
@@ -24,6 +24,11 @@
             animation: bounceY 1s;
         }
     }
+
+    @media (max-width: 500px) {
+        font-size: 16px;
+        line-height: auto;
+    }
 }
 
 .selected {
